--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Empresa A</title>
+
+	<link rel="stylesheet" type="text/css" href="CSS/estilos.css">
 	
 	<!---- Bootstrap------>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -10,7 +12,7 @@
 
 <body>
 	
-	<h1> NUEVO CURSO DE pILDORAiNFORMATICA SOBRE GIT</h1>
+	<h1> NUEVO CURSO DE PILDORAiNFORMATICA SOBRE GIT</h1>
 	
 	
 	
